--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "mongoose": "^8.16.1",
     "next": "15.3.4",
     "react": "^19.0.0",
