--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@imagekit/next": "^2.1.2",
     "bcryptjs": "^3.0.2",
+    "imagekit": "^6.0.0",
+    "imagekitio-next": "^1.0.1",
+    "imagekitio-react": "^4.3.0",
+    "lucide": "^0.525.0",
+    "lucide-react": "^0.525.0",
     "mongoose": "^8.16.1",
     "next": "15.3.4",
-    "react": "^19.0.0",
+    "next-auth": "^4.24.11",
+    "react": "^19.1.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
